--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_background_service: ^5.0.6
   flutter_blue_plus: ^1.3.5
   permission_handler: ^12.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  geolocator: ^14.0.2
+  geolocator: ^11.1.0
   flutter_map: ^6.2.1
+  share_plus: ^10.0.2
+
 
   latlong2: ^0.9.0
   audioplayers: ^5.2.1 
